# extend-python

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: release.yml  release_stage.yml
extend/: __init__.py  client.py  extend.py  models.py  validations.py
extend/config/: __init__.py
extend/resources/: credit_cards.py  expense_data.py  receipt_attachments.py  resource.py  transactions.py  virtual_cards.py
notebooks/: api_testing.ipynb
src/extend_api/: client.py  models.py
tests/: simple_test.py  test_client.py  test_integration.py
